[add]: photo uploading to s3
